--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -6,7 +6,7 @@
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
 
-hibernate.connection.driver_class = org.mysql.jdbc.Driver
+hibernate.connection.driver_class = com.mysql.jdbc.Driver
 hibernate.connection.url = jdbc:mysql://localhost/mydatabase
 hibernate.connection.username = myuser
 hibernate.connection.password = secret
