Fuck ExPvP, we Expvp nau
What is sleeep
baby don't hurt meee

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ This file is part of ExPvP,
+  ~ This file is part of Expvp,
   ~ Copyright (c) 2016-2016.
   ~
   ~ This work is protected by international copyright laws and licensed
