--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,6 @@
 #~~~~███████╗██╔╝~██╗██║~~~~~~╚████╔╝~██║~~~~~
 #~~~~╚══════╝╚═╝~~╚═╝╚═╝~~~~~~~╚═══╝~~╚═╝~~~~~
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ExPvP Minecraft Game Mode
+# Expvp Minecraft Game Mode
 # Copyright (C) 2016 Literallie / Philipp Nowak.
 # Please see the LICENSE.txt file included in the plugin jar.
