--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <xyc.version>3.3.10.0</xyc.version>
+        <xyc.version>4.0.0.1</xyc.version>
         <minecraft.version>1.8.3</minecraft.version>
         <spigot-api.release>R0.1</spigot-api.release>
         <rootDir>${project.basedir}</rootDir>
@@ -111,12 +111,12 @@
         </dependency>
 
         <dependency>
-            <groupId>io.github.xxyy.common</groupId>
+            <groupId>li.l1t.common</groupId>
             <artifactId>xyc-bukkit</artifactId>
             <version>${xyc.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.xxyy.common</groupId>
+            <groupId>li.l1t.common</groupId>
             <artifactId>xyc-games</artifactId>
             <version>${xyc.version}</version>
         </dependency>
