Add Intake-Spigot library for command framework

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <version>${hibernate.version}</version>
         </dependency>
         <dependency>
+            <groupId>li.l1t.common</groupId>
+            <artifactId>intake-spigot</artifactId>
+            <version>4.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.38</version>
