--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
         <dependency>
             <groupId>li.l1t.common</groupId>
             <artifactId>intake-spigot</artifactId>
-            <version>4.2-SNAPSHOT</version>
+            <version>4.2.1</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
