--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
             <artifactId>xlogin-api</artifactId>
             <version>2.3.0-SNAPSHOT</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.github.xxyy</groupId>
+                    <artifactId>common-java7</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
