--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 #
 # This file is part of Expvp,
 # Copyright (c) 2016-2016.
@@ -5,13 +6,12 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-
-hibernate.connection.driver_class = com.mysql.jdbc.Driver
-hibernate.connection.url = jdbc:mysql://localhost/mydatabase
-hibernate.connection.username = myuser
-hibernate.connection.password = secret
+hibernate.connection.driver_class=com.mysql.jdbc.Driver
+hibernate.connection.url=jdbc:mysql://localhost/mydatabase
+hibernate.connection.username=myuser
+hibernate.connection.password=secret
 hibernate.c3p0.min_size=1
 hibernate.c3p0.max_size=20
 hibernate.c3p0.timeout=1800
 hibernate.c3p0.max_statements=50
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
