Add extra config for tests missed in previous commit

--- a/src/test/resources/hibernate.properties
+++ b/src/test/resources/hibernate.properties
@@ -7,7 +7,7 @@
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
 hibernate.connection.driver_class=org.h2.Driver
-hibernate.connection.url=jdbc:h2:mem:
+hibernate.connection.url=jdbc:h2:mem:mt_main;INIT=CREATE SCHEMA IF NOT EXISTS mt_main;
 hibernate.connection.username=myuser
 hibernate.connection.password=secret
 hibernate.c3p0.min_size=1
