--- a/src/test/resources/hibernate.properties
+++ b/src/test/resources/hibernate.properties
@@ -17,3 +17,4 @@ hibernate.c3p0.max_statements=50
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 #### WARNING! Only use this in Unit Tests, this drops and recreates the whole database!
 hibernate.hbm2ddl.auto=create-drop
+hibernate.show_sql=true
