Add ScopedSession for unit-of-work scoped sessions; Fixes #580

--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,16 @@
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                 </configuration>
             </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <xyc.unittest>true</xyc.unittest>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
         </plugins>
 
         <resources>
