--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -15,3 +15,6 @@ hibernate.c3p0.max_size=20
 hibernate.c3p0.timeout=1800
 hibernate.c3p0.max_statements=50
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=true
