--- a/src/test/resources/hibernate.properties
+++ b/src/test/resources/hibernate.properties
@@ -15,6 +15,9 @@ hibernate.c3p0.max_size=20
 hibernate.c3p0.timeout=1800
 hibernate.c3p0.max_statements=50
 hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=true
 #### WARNING! Only use this in Unit Tests, this drops and recreates the whole database!
 hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql=true
