Refactor SkillObtainmentService to ResearchService; Fixes #742

--- a/src/main/resources/me/minotopia/expvp/error.properties
+++ b/src/main/resources/me/minotopia/expvp/error.properties
@@ -5,6 +5,7 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-internal=§4§lInternal error: §c 
+internal=§4§lInternal error: §c{0}
+tree.missing-parent=You need to research {1} first before you can research {0}.
 tree.skill-not-in-tree=Missing skill {0} in tree {1}, please try again.
-user=§c§lError: §c
+user=§c§lError: §c{0}
