--- a/src/main/resources/me/minotopia/expvp/error.properties
+++ b/src/main/resources/me/minotopia/expvp/error.properties
@@ -6,6 +6,7 @@
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
 internal=§4§lInternal error: §c{0}
+tp.insufficient-tp=You need {0} Talent Points for this, but only have {1}.
 tree.missing-parent=You need to research {1} first before you can research {0}.
 tree.skill-not-in-tree=Missing skill {0} in tree {1}, please try again.
 user=§c§lError: §c{0}
