--- a/pom.xml
+++ b/pom.xml
@@ -135,12 +135,24 @@
             <groupId>li.l1t.common</groupId>
             <artifactId>xyc-1.8-games</artifactId>
             <version>${xyc.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>li.l1t.xlogin</groupId>
             <artifactId>xlogin-api</artifactId>
             <version>2.4.0-SNAPSHOT</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>li.l1t.common</groupId>
+                    <artifactId>xyc-bukkit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
@@ -151,7 +163,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.4</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
