Add basic league support; Fixes #590

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -7,4 +7,13 @@
 #
 
 expvp=Expvp
+format.broadcast=§6[§7Exp§6] {0}
+format.error-internal=§4§lInternal error: §c{0}
+format.error-user=§c§lError: §c{0}
+format.header=§a»»» §e{0} §a«««
+format.list-header=§e§l➩ §e{0}
+format.list-item=§e§l-➩ §e{0}
+format.result=§e§l➩ §6{0}
+format.result-success=§e§l➩ §a{0}
+format.warning=§e§lWarning: §e
 player.prefixed-name={1} {0}
