--- a/src/main/resources/me/minotopia/expvp/score.properties
+++ b/src/main/resources/me/minotopia/expvp/score.properties
@@ -5,4 +5,21 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-tp.actionbar={0} Talent Points - next after {1} kills  
+kill.broadcast=§6[§7Exp§6] §7{0} §6killed §7{1}§6.
+tp.actionbar={0} Talent Points - next after {1} kills
+kill.tp.many=You received {0} Talent Points for this kill.
+tp.kill.one=You received a Talent Point for this kill.
+league.WOOD.name=§7[Wooden]
+league.STONE.name=§7[§8Stone§7]
+league.EMERALD.name=§7[§2Emerald§7]
+league.DIAMOND.name=§7[§bDiamond§7]
+league.OBSIDIAN.name=§7[§2Obsidian§7]
+league.BEDROCK.name=§7[§c§lBedrock§7]
+league.WOOD.chat-format={1} {0}: §f{2}
+league.STONE.chat-format={1} {0}: §f{2}
+league.EMERALD.chat-format={1} {0}: §f{2}
+league.DIAMOND.chat-format={1} {0}: §b§l>>> §f{2}
+league.OBSIDIAN.chat-format={1} {0}: §2§l>>> §f{2}
+league.BEDROCK.chat-format={1} {0}: §c§l>§0§l>§c§l> §f{2}
+league.change.up=You have been upgraded to the {0} league because of your extraordinary fighting performance. Congratulations!
+league.change.down=You have been down-ranked to the {0} league.
