Show Exp rewards to killer/victim

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -17,3 +17,4 @@ format.result=§e§l➩ §6{0}
 format.result-success=§e§l➩ §a{0}
 format.warning=§e§lWarning: §e
 player.prefixed-name={1} {0}
+plural-base={0} {1}
