--- a/src/main/resources/me/minotopia/expvp/score.properties
+++ b/src/main/resources/me/minotopia/expvp/score.properties
@@ -5,10 +5,11 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
+tp.actionbar-gain=
+tp.actionbar.one=
 kill.broadcast=§6[§7Exp§6] §7{0} §6killed §7{1}§6.
-tp.actionbar={0} Talent Points - next after {1} kills
-kill.tp.many=You received {0} Talent Points for this kill.
-tp.kill.one=You received a Talent Point for this kill.
+tp.status=§aYou now have {0} and will receive the next one after {1}.
+tp.actionbar.gain=§a+ {0}
 league.WOOD.name=§7[Wooden]
 league.STONE.name=§7[§8Stone§7]
 league.EMERALD.name=§7[§2Emerald§7]
@@ -23,3 +24,11 @@ league.OBSIDIAN.chat-format={1} {0}: §2§l>>> §f{2}
 league.BEDROCK.chat-format={1} {0}: §c§l>§0§l>§c§l> §f{2}
 league.change.up=You have been upgraded to the {0} league because of your extraordinary fighting performance. Congratulations!
 league.change.down=You have been down-ranked to the {0} league.
+tp.singular=Talent Point
+tp.plural=Talent Points
+tp.actionbar.lose=§c- {0}
+kill.one=kill
+kill.many=kills
+tp.actionbar=§e{0} - next after {1} 
+kill.victim=You were killed and therefore lost {0} Exp.
+kill.culprit=You killed somebody and therefore gained {0} Exp.
