--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -18,3 +18,4 @@ format.result-success=§e§l➩ §a{0}
 format.warning=§e§lWarning: §e
 player.prefixed-name={1} {0}
 plural-base={0} {1}
+research.success=§aYou successfully researched {0}§a.
