--- a/src/main/resources/me/minotopia/expvp/score.properties
+++ b/src/main/resources/me/minotopia/expvp/score.properties
@@ -24,8 +24,8 @@ league.OBSIDIAN.chat-format={1} {0}: §2§l>>> §f{2}
 league.BEDROCK.chat-format={1} {0}: §c§l>§0§l>§c§l> §f{2}
 league.change.up=You have been upgraded to the {0} league because of your extraordinary fighting performance. Congratulations!
 league.change.down=You have been down-ranked to the {0} league.
-tp.singular=Talent Point
-tp.plural=Talent Points
+tp.one=Talent Point
+tp.many=Talent Points
 tp.actionbar.lose=§c- {0}
 kill.one=kill
 kill.many=kills
