Fix death message having two prefixes

--- a/src/main/resources/me/minotopia/expvp/score.properties
+++ b/src/main/resources/me/minotopia/expvp/score.properties
@@ -7,7 +7,7 @@
 #
 tp.actionbar-gain=
 tp.actionbar.one=
-kill.broadcast=§6[§7Exp§6] §7{0} §6killed §7{1}§6.
+kill.broadcast=§7{0} §6killed §7{1}§6.
 tp.status=§aYou now have {0} and will receive the next one after {1}.
 tp.actionbar.gain=§a+ {0}
 league.WOOD.name=§7[Wooden]
