Better actionbar colours

--- a/src/main/resources/me/minotopia/expvp/score.properties
+++ b/src/main/resources/me/minotopia/expvp/score.properties
@@ -9,7 +9,7 @@ tp.actionbar-gain=
 tp.actionbar.one=
 kill.broadcast=§7{0} §6killed §7{1}§6.
 tp.status=§aYou now have {0} and will receive the next one after {1}.
-tp.actionbar.gain=§a+ {0}
+tp.actionbar.gain=§2+ {0}
 league.WOOD.name=§7[Wooden]
 league.STONE.name=§7[§8Stone§7]
 league.EMERALD.name=§7[§2Emerald§7]
@@ -26,7 +26,7 @@ league.change.up=You have been upgraded to the {0} league because of your extrao
 league.change.down=You have been down-ranked to the {0} league.
 tp.one=Talent Point
 tp.many=Talent Points
-tp.actionbar.lose=§c- {0}
+tp.actionbar.lose=§4- {0}
 kill.one=kill
 kill.many=kills
 tp.actionbar=§e{0} - next after {1} 
