Proper pluralisation for InsufficientTalentPointsException

--- a/src/main/resources/me/minotopia/expvp/error.properties
+++ b/src/main/resources/me/minotopia/expvp/error.properties
@@ -8,6 +8,6 @@
 db.hibernate-misc=Error talking to the database.
 db.hibernate-rollback=Error taling to the database, rollback.
 db.other=Error related to the database.
-tp.insufficient-tp=You need {0} Talent Points for this, but only have {1}.
+tp.insufficient-tp=You need {0} for this, but only have {1}.
 tree.missing-parent=You need to research {1} first before you can research {0}.
 tree.skill-not-in-tree=Missing skill {0} in tree {1}, please try again.
