--- a/src/main/resources/me/minotopia/expvp/error.properties
+++ b/src/main/resources/me/minotopia/expvp/error.properties
@@ -9,5 +9,5 @@ db.hibernate-misc=Error talking to the database.
 db.hibernate-rollback=Error taling to the database, rollback.
 db.other=Error related to the database.
 tp.insufficient-tp=You need {0} for this, but only have {1}.
-tree.missing-parent=You need to research {1} first before you can research {0}.
+tree.missing-parent=§cYou need to research {1} §cfirst before you can research {0}§c.
 tree.skill-not-in-tree=Missing skill {0} in tree {1}, please try again.
