--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -5,7 +5,6 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-
 expvp=Expvp
 format.broadcast=§6[§7Exp§6] {0}
 format.error-internal=§4§lInternal error: §c{0}
@@ -19,3 +18,6 @@ format.warning=§e§lWarning: §e
 player.prefixed-name={1} {0}
 plural-base={0} {1}
 research.success=§aYou successfully researched {0}§a.
+respawn.delay-start=You may respawn by selecting 'Leave Bed' in five seconds.
+respawn.delay-wait=You may not respawn yet. Please wait a little.
+respawn.delay-end=You may respawn now.
