Change respawn to use spectator mode instead of non-working beds; Fixes #763

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -18,6 +18,5 @@ format.warning=§e§lWarning: §e
 player.prefixed-name={1} {0}
 plural-base={0} {1}
 research.success=§aYou successfully researched {0}§a.
-respawn.delay-start=You may respawn by selecting 'Leave Bed' in five seconds.
-respawn.delay-wait=You may not respawn yet. Please wait a little.
-respawn.delay-end=You may respawn now.
+respawn.delay-start=You can continue playing in five seconds.
+respawn.delay-end=You may continue playing now.
