Teleport players to map spawn upon respawn

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -20,3 +20,4 @@ plural-base={0} {1}
 research.success=§aYou successfully researched {0}§a.
 respawn.delay-start=You can continue playing in five seconds.
 respawn.delay-end=You may continue playing now.
+respawn.no-spawn=You could not be teleported due to no map being selected.
