Translate object admin commands; #755 #757

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -21,3 +21,5 @@ research.success=§aYou successfully researched {0}§a.
 respawn.delay-start=You can continue playing in five seconds.
 respawn.delay-end=You may continue playing now.
 respawn.no-spawn=You could not be teleported due to no map being selected.
+yes=yes
+no=no
