Add I18n support to skill and tree UI; Fixes #755

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -23,3 +23,16 @@ respawn.delay-end=You may continue playing now.
 respawn.no-spawn=You could not be teleported due to no map being selected.
 yes=yes
 no=no
+unknown=unknown
+research.already=\
+§aYou already researched\
+§athis skill.
+research.notyet=\
+§cYou cannot research\
+§cthis skill yet.
+research.possible=\
+§eYou may research this\
+§efor {0}.
+inv.back-button=<< §6§lprevious
+ui.skilledit.item-name=
+tree-select.title=§e§lSkill trees
