--- a/src/main/resources/me/minotopia/expvp/error.properties
+++ b/src/main/resources/me/minotopia/expvp/error.properties
@@ -6,16 +6,17 @@
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
 db.hibernate-misc=Error talking to the database.
-db.hibernate-rollback=Error taling to the database, rollback.
+db.hibernate-rollback=Error talking to the database, rollback.
 db.other=Error related to the database.
 inv.invalid-slot=Invalid slot ID "{0}".
 player.multiple=There are multiple players matching your criteria. Try querying by UUID.
 player.unknown=There is no player matching "{0}".
 reg.already-exists=There is already a {0} with ID "{1}".
-reg.changed=
 reg.error-saving=Error saving {0} with ID "{1}"
 reg.there-is-no=There is no {0} with ID "{1}".
 skill.handlerspec-slash=HandlerSpecs must start with a slash (/).
 tp.insufficient-tp=You need {0} for this, but only have {1}.
 tree.missing-parent=§cYou need to research {1} §cfirst before you can research {0}§c.
-tree.skill-not-in-tree=Missing skill {0} in tree {1}, please try again.
+tree.missing-value=No skill at this node, please try again later.
+tree.prevented-render-fail=This action cannot be executed since it would cause the tree to be too big for an inventory.
+tree.render-fail=Failed to render skill tree.
