Explicitly bind menu factories for command injection

--- a/src/main/resources/me/minotopia/expvp/error.properties
+++ b/src/main/resources/me/minotopia/expvp/error.properties
@@ -20,3 +20,4 @@ tree.missing-parent=§cYou need to research {1} §cfirst before you can research
 tree.missing-value=No skill at this node, please try again later.
 tree.prevented-render-fail=This action cannot be executed since it would cause the tree to be too big for an inventory.
 tree.render-fail=Failed to render skill tree.
+tree.skill-not-in-tree=Missing skill {0} in tree {1}, please try again.
