Add message pointing to language files for admin commands

--- a/src/main/resources/me/minotopia/expvp/admin.properties
+++ b/src/main/resources/me/minotopia/expvp/admin.properties
@@ -54,3 +54,5 @@ Players won't be able to see this tree. Try removing the\
 outermost skill manually. This should not happen.
 ui.skilledit.add-subskill-success=Successfully added child skill.
 ui.skilledit.unable-to-save=Unable to save tree.
+skill.info.lang-files=You can configure names in the lang/skill.properties and lang/skill_de.properties files in the plugin folder.
+tree.info.lang-files=You can configure names in the lang/tree.properties and lang/tree_de.properties files in the plugin folder.
