Fix warning messages never showing the actual message...LOL

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -14,7 +14,7 @@ format.list-header=§e§l➩ §e{0}
 format.list-item=§e§l-➩ §e{0}
 format.result=§e§l➩ §6{0}
 format.result-success=§e§l➩ §a{0}
-format.warning=§e§lWarning: §e
+format.warning=§e§lWarning: §e{0}
 player.prefixed-name={1} {0}
 plural-base={0} {1}
 research.success=§aYou successfully researched {0}§a.
