Fix a few locale issues

--- a/src/main/resources/me/minotopia/expvp/admin.properties
+++ b/src/main/resources/me/minotopia/expvp/admin.properties
@@ -37,20 +37,20 @@ reg.created=Created new {0} with ID "{1}"
 ui.skilledit.item-name=§e§lChange skill
 ui.skilledit.success=Skill changed successfully.
 ui.skilledit.clicktoedit=§eClick to edit
-ui.skilledit.change-add-lore=§a{0}\
-\
+ui.skilledit.change-add-lore=§a{0}\n\
+\n\
 §eClick here to edit
 ui.skilledit.subskill-title=§eChild skill {0}:
-ui.skilledit.remove-children-first=§cRemove child skills\
-§cbefore you can remove\
+ui.skilledit.remove-children-first=§cRemove child skills\n\
+§cbefore you can remove\n\
 §cthis skill.
 ui.skilledit.click-to-remove=§aClick to remove
 ui.skilledit.click-to-add=§aClick to add
 ui.skilledit.rm-children-first=You have to remove this skill's children first before you can remove it.
 ui.skilledit.rm-subskill-success=Successfully removed child skill.
 ui.skillsel.title=§9§lSelect skill §9({0}/{1})
-ui.skilledit.unrederable=Unable to render this skill tree into an inventory.\
-Players won't be able to see this tree. Try removing the\
+ui.skilledit.unrederable=Unable to render this skill tree into an inventory.\n\
+Players won't be able to see this tree. Try removing the\n\
 outermost skill manually. This should not happen.
 ui.skilledit.add-subskill-success=Successfully added child skill.
 ui.skilledit.unable-to-save=Unable to save tree.
