--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -24,14 +24,14 @@ respawn.no-spawn=You could not be teleported due to no map being selected.
 yes=yes
 no=no
 unknown=unknown
-research.already=\
-§aYou already researched\
+research.already=\n\
+§aYou already researched\n\
 §athis skill.
-research.notyet=\
-§cYou cannot research\
+research.notyet=\n\
+§cYou cannot research\n\
 §cthis skill yet.
-research.possible=\
-§eYou may research this\
+research.possible=\n\
+§eYou may research this\n\
 §efor {0}.
 inv.back-button=<< §6§lprevious
 tree-select.title=§e§lSkill trees
