--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <!-- TitleManager -->
             <url>http://repo.puha.io/nexus/content/repositories/releases/</url>
         </repository>
+        <repository>
+            <id>inventive-repo</id>
+            <!-- BossBar-API -->
+            <url>https://repo.inventivetalent.org/content/groups/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -129,6 +134,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.38</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.inventivetalent</groupId>
+            <artifactId>bossbarapi</artifactId>
+            <version>2.4.1</version>
         </dependency>
 
         <dependency>
