--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -35,3 +35,4 @@ research.possible=\n\
 §efor {0}.
 inv.back-button=<< §6§lprevious
 tree-select.title=§e§lSkill trees
+spawn.bossbar-format=§6Current map: §e{0} §6- next in §e{1} minutes
