Move core!spawn.bossbar-format to spawn bundle

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -35,4 +35,6 @@ research.possible=\n\
 §efor {0}.
 inv.back-button=<< §6§lprevious
 tree-select.title=§e§lSkill trees
-spawn.bossbar-format=§6Current map: §e{0} §6- next in §e{1} minutes
+minute.one=minute
+minute.many=minutes
+spawn.chat-reminder=A new map will be selected in {0}. Remember to /cast your vote until then!
