Add SpawnVoteTask; Fixes #750
This does not pass tests yet because of the missing SpawnVoteService

--- a/src/main/resources/me/minotopia/expvp/spawn.properties
+++ b/src/main/resources/me/minotopia/expvp/spawn.properties
@@ -7,3 +7,4 @@
 #
 # Note that actual spawn names are configured by the administrator in this bundle's override file.
 bossbar-format=§6Current map: §e{0} §6- next in §e{1} minutes
+vote.chat-reminder=A new map will be selected in {0}. Remember to /cast your vote until then!
